--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Furniture Store</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+    <base href="/GDGoC/">
 </head>
 <body>
     <!-- Top Green Bar -->
